--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
+<html lang="en" >
+
 <html>
-  <head>
+
+<style>
+.bigger {
+  font-size: larger;
+}
+#copyright {
+  color: #999;
+}
+</style>
+
+<head>
+    <meta charset="UTF-8">
+
     <title>{{ page.title }}</title>
+
+    <!-- Social Media buttons -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     
+    <!-- Contact form -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
-  </head>
+</head>
 
-
-  <body>
+<body>
     <nav>
-<ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
-</ul>
+      <ul>
+        <li><a href="/"><span class="bigger"> Hadrien's < Wall > </span></a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/portfolio">Portfolio</a></li>
+        <li><a href="/blog">Blog</a></li>
+      </ul>
     </nav>
+
 <div class="container">
 
-  {{ content }}
+{{ content }}
 
 </div>
-  
+
   <footer>
-   <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-   </ul>
+      <ul class="social-networks bounce">
+          <li><a href="https://www.linkedin.com/in/hadnunpi/" class="icon-linkedin" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/HP-Nunes" class="icon-github" target="_blank">GitHub</a></li>
+          <li><a href="https://twitter.com/geocuriosity" class="icon-twitter" target="_blank">Twitter</a></li>
+      </ul>
+
+  <div id='copyright'>
+    <div align='center'><small>Copyright © 2018 Hadrien N Picq. All Rights Reserved. Powered with <a href="https://github.com/nandomoreirame/end2end" target='blank'>Jekyll</a> & Github pages.</small>
+    </div>
+  </div> 
   </footer>
-  </body>
+
+</body>
 
 </html>
+
+
