updating site: portfolio, jekyll url, muted blog content, contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
       </ul>
 
   <div id='copyright'>
-    <div align='center'><small>Copyright © 2018 Hadrien N Picq. All Rights Reserved. Powered with <a href="https://github.com/nandomoreirame/end2end" target='blank'>Jekyll</a> & Github pages.</small>
+    <div align='center'><small>Copyright © 2018 Hadrien N Picq. All Rights Reserved. Made with <a href="http://jmcglone.com/guides/github-pages/" target='blank'>Jekyll</a> & Github pages.</small>
     </div>
   </div> 
   </footer>
