--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,22 @@
 @font-face {
-    font-family: 'Geo Sans Light';
-    src: url("/assets/fonts/geo-sans-light/GeosansLight.ttf") format('GeosansLight');
+    font-family: 'PT Sans' !important;
+    src: url("https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic");
 }
 body { margin: 60px auto; width: 70%}
 
 a { text-decoration: none; color: #999; }
 a:hover { color: azure; }
 
-nav { font-family: 'GeosansLight'; font-size: 1.5em; line-height: 5em; color: #333; text-align: center; }
-p { font-family: 'GeosansLight'; font-size: 1.5em; line-height: 1.4em; color: white; }
+nav { font-family: 'PT Sans'!important; font-size: 1.5em; line-height: 5em; color: #333; text-align: center; }
+p { font-family: 'PT Sans'!important; font-size: 1.5em; line-height: 1.4em; color: white; }
 
-/* h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; } */
-
-h1, h2, h3, h4 { font-family: 'GeosansLight'; }
+h1, h2, h3, h4 { font-family: 'PT Sans'!important; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; margin-top: 70px }
 h4 { font-size: 1.9em; }
 
-/* nav ul, footer ul { font-size: 1.5em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; list-style: none; font-weight: bold; } */
-
-nav ul, footer ul { font-size: 1.5em; font-family: 'GeosansLight'; list-style: none; font-weight: bold; }
+nav ul, footer ul { font-size: 1.5em; font-family: 'PT Sans'!important; list-style: none; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
 html, body{
@@ -53,8 +49,8 @@ h1.about { margin: 20px auto 40px; font-size: 1.5em; }
 form.about { margin: auto; width: 50%; padding: 10px;}
 
 /* Blog */
-/* ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
-ul.posts li { list-style: none; } */
+ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
+ul.posts li { list-style: none; }
 
 /* Portfolio */
 /* .portfolio { margin: 0px 0px 60px; }
