--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {
 } */
 
 h2 {
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
   margin-bottom: 45px;
   font-size: 12px;
   text-transform: uppercase;
@@ -410,7 +410,7 @@ form textarea {
 body, html {
 /* margin: 0; */
 /* background:transparent; */
-font-family: "Ubuntu", "微軟正黑體", sans-serif;
+font-family: "Ubuntu", sans-serif;
 /* letter-spacing: 0.65px; */
 /* font-size: 15px; */
 color: whitesmoke;
