--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
 
     <title>{{ page.title }}</title>
 
@@ -22,11 +25,40 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    
+
+    <!-- Leaflet.js -->
+      <link rel="stylesheet" href="/assets/postsAssets/2018-12-20-breathing-between-fires/css/leaflet2.css">
+      <link rel="stylesheet" href="/assets/postsAssets/2018-12-20-breathing-between-fires/css/qgis2web.css"><link rel="stylesheet"href="/assets/postsAssets/2018-12-20-breathing-between-fires/css/fontawesome-all.min.css">
+      <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+      <!-- d3 JavaScript -->
+          <script src="https://d3js.org/d3.v4.min.js"></script>
+      <!-- GroupLayers -->
+      <script src="/assets/postsAssets/2018-12-20-breathing-between-fires/src/leaflet.groupedlayercontrol.css"></script>
+      <!-- <script src="/assets/postsAssets/2018-12-20-breathing-between-fires/src/leaflet.groupedlayercontrol.js"></script> -->
+
+          <script>
+              ACCESS_TOKEN = 'pk.eyJ1IjoiZ3VhcG9yZSIsImEiOiJjanBnMWc1emYwZmxzM3dxaG95YjlpeG44In0.ZCll_-ScQC2V8JMVila5HA';
+              MB_ATTR = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+                  '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                  'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>';
+              MB_URL = 'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=' + ACCESS_TOKEN;
+              OSM_URL = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
+              OSM_ATTRIB = '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors';
+          </script>
+        <style>
+              #map {
+                  width: 600px;
+                  height: 700px;
+              }
+        </style>
+
     <!-- Contact form -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+
+    
+
 </head>
 
 <body>
