--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
       </ul>
 
   <div id='copyright'>
-    <div align='center'><small>Copyright © 2018 Hadrien N Picq. All Rights Reserved. Made with <a href="http://jmcglone.com/guides/github-pages/" target='blank'>Jekyll</a> & Github pages.</small>
+    <div align='center'><small>Copyright © 2018-19 Hadrien N Picq. All Rights Reserved. Made with <a href="http://jmcglone.com/guides/github-pages/" target='blank'>Jekyll</a> & Github pages.</small>
     </div>
   </div> 
   </footer>
