--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,6 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic" rel="stylesheet" type='text/css'>
+{% if site.google_analytics and jekyll.environment == 'production' %}
 {% include google_analytics.html %}
+{% endif %}
