--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta id="viewport" name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="description" content="HP-Nunes is a Master student at Concordia University and UC Berkeley alumni" />
 
     <title>{{ page.title }}</title>
 
@@ -32,12 +34,11 @@
       <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
       <!-- d3 JavaScript -->
-          <script src="https://d3js.org/d3.v4.min.js"></script>
+      <script src="https://d3js.org/d3.v4.min.js"></script>
       <!-- GroupLayers -->
       <script src="/assets/postsAssets/2018-12-20-breathing-between-fires/src/leaflet.groupedlayercontrol.css"></script>
-      <!-- <script src="/assets/postsAssets/2018-12-20-breathing-between-fires/src/leaflet.groupedlayercontrol.js"></script> -->
-
-          <script>
+      <!-- Embedded Map Attributions -->
+      <script>
               ACCESS_TOKEN = 'pk.eyJ1IjoiZ3VhcG9yZSIsImEiOiJjanBnMWc1emYwZmxzM3dxaG95YjlpeG44In0.ZCll_-ScQC2V8JMVila5HA';
               MB_ATTR = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
                   '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
@@ -57,19 +58,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 
-    
 
 </head>
-
 <body>
-    <nav>
-      <ul>
-        <li><a href="/"><span class="bigger"> Hadrien's < Wall > </span></a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/portfolio">Portfolio</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
+  <header>
+
+    <div class="header-bg" style="background-image: url(https://media.giphy.com/media/p5he4jDgEPeUg/giphy.gif); background-size: 100% 100%; opacity: 1;">
+      <div class="header-inner" style="padding: 4px 4px 30px;">
+    <div align="center">
+      <div class="image-cropper">
+        <a href="/">
+          <img class="circle" src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb"> 
+        </a>
+      </div>
+    </div>
+    </div> 
+  </div>
+
+  <nav>
+    <ul>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
+      <!-- <li><a href="/Menv">Master of Environment</a></li> -->
+      <li><a href="/blog">Blog</a></li>
+      <li><a href="/assets/downloads/HPNunes_Resume.pdf" target='blank' title="Download my resume (pdf)">Resume</a></li>
+    </ul>
+</nav> 
+
+  </header>
 
 <div class="container">
 
@@ -85,7 +101,7 @@
       </ul>
 
   <div id='copyright'>
-    <div align='center'><small>Copyright © 2018-19 Hadrien N Picq. All Rights Reserved. Made with <a href="http://jmcglone.com/guides/github-pages/" target='blank'>Jekyll</a> & Github pages.</small>
+    <div align='center'><small>2019 Hadrien N Picq. Made with <a href="http://jmcglone.com/guides/github-pages/" target='blank'>Jekyll</a> & Github pages.</small>
     </div>
   </div> 
   </footer>
