--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,64 @@
-@font-face {
-    font-family: 'PT Sans' !important;
-    src: url("https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic");
+body { 
+    display: block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased;
+    line-height: 1.5;
+    }
+
+.container {
+        width: 900px;
+        margin: 0 auto;
+        margin-top: 0px;
+        margin-right: auto;
+        margin-bottom: 0px;
+        margin-left: auto;
+    }
+a { text-decoration: none; 
+        color: #6ccaff;
+     }
+a:hover { color: #fcd0d3; }
+
+nav a { text-decoration: none; 
+    color: #56d679;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+ }
+ nav a:hover { color: #b3e6ff; }
+
+nav {font-size: 1.4em; line-height: 3em; color: #333; text-align: center; }
+p { font-size: 1.5em; line-height: 1.4em; color: white;}
+
+.header-bg {
+width: 55%;
+margin: 0rem auto;
 }
-body { margin: 60px auto; width: 70%}
 
-a { text-decoration: none; color: #999; }
-a:hover { color: azure; }
+header:after,
+section:after {
+    content: '';
+    display: block;
+    width: 150px;
+    border-top: 1px solid rgba(177, 162, 162, 0.2);
+    margin: 25px auto;
+    padding: 0;
+}
 
-nav { font-family: 'PT Sans'!important; font-size: 1.5em; line-height: 5em; color: #333; text-align: center; }
-p { font-family: 'PT Sans'!important; font-size: 1.5em; line-height: 1.4em; color: white; }
-
-h1, h2, h3, h4 { font-family: 'PT Sans'!important; }
 h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; margin-top: 70px }
 h4 { font-size: 1.9em; }
 
-nav ul, footer ul { font-size: 1.5em; font-family: 'PT Sans'!important; list-style: none; font-weight: bold; }
-nav ul li, footer ul li { display: inline; margin-right: 20px; }
+nav ul, footer ul { font-size: 1.5em; list-style: none; font-weight: bold;}
+nav ul li, footer ul li { display: inline; margin-right: 20px;}
 
 html, body{
     padding:0px;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 .image-cropper {
-    width: 450px;
-    height: 450px;
+    width: 150px;
+    height: 150px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
@@ -38,15 +71,15 @@ img {
     margin: 0 auto;
     height: 100%;
     width: auto;
+    opacity: .8;
 }
-/* footer { border-top: 1px solid #d5d5d5; font-size: .8em; } */
 
 /*****************************************************************/
 /*****************************************************************/
-/* About */
-p.about { margin: 20px auto 40px; font-size: 1.5em; }
+/* Contact */
+/* p.contact { margin: 20px auto 40px; font-size: 1.5em; }
 h1.about { margin: 20px auto 40px; font-size: 1.5em; }
-form.about { margin: auto; width: 50%; padding: 10px;}
+form.contact { margin: auto; width:100%; padding: 10px;} */
 
 /* Blog */
 ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
@@ -59,3 +92,4 @@ ul.posts li { list-style: none; }
 .portfolio address, .cv .download { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 .portfolio address, .cv p { font-size: 1.2em; }
 .portfolio .download { float: right; font-size: .8em; text-transform: uppercase; } */
+
