--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,5 +9,7 @@
 {% if jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
+
+</head>
 
 <title>{{ page.title | default: site.title }}</title>
