--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,36 +5,40 @@
   </head>
 <style>
 .profile-img {
-    position: relative;
+    position: relative; 
     overflow: hidden;
-    border-radius: 60%;
+    /* border-radius: 100%; */
     vertical-align: middle;
-    width: 100%;
-    height: 100%;
+    height: 250px;
+    max-height: 100%;
     /* -webkit-transform: rotate(270deg);
     -ms-transform: rotate(270deg);
         transform: rotate(270deg); */
 }
-.image-cropper {
-    width: 150px;
-    height: 150px;
+/* .image-cropper {
+    width: 50%;
+    height: 30%;
     position: relative;
     overflow: hidden;
-    border-radius: 50%;
-}
+    border-radius: 300%;
+} */
 </style>
 <body>
   <main class="container">
     <section class="about">
-      <div class = "image-cropper">
-      <a href="/"><img class = 'profile-img' src="{{ "/images/avatar21.jpg" | relative_url }}" alt="{{ site.plainwhite.name }}"></a>
-      </div>
+      <!-- <div class = "image-cropper"> -->
+      <a href="/"><img class = 'profile-img' src="{{ "/images/avatar21.png" | relative_url }}" alt="{{ site.plainwhite.name }}" style="width: 55vw; min-width: 330px;"></a>
+      <!-- </div> -->
       <h2 id="title">
         <a href="/">{{ site.plainwhite.name }}</a>
       </h2>
+
       <p class="tagline">{{ site.plainwhite.tagline }}</p>
-      <h2><a href="/assets/download/HPNunes_Resume.pdf" target='blank' title="Download my resume (pdf)">Resume</a></h2>
+      <h2><a href="/assets/download/HPNunes_Resume.pdf" target='blank' title="Download my resume (pdf)">Resume</a>
       <br><br><br>
+      </h2>
+      
+
       <ul class="social">
         <a href="https://twitter.com/geocuriosity" target=_blank>
           <li>
