--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-
 {%- if page.title -%}
   <h1 class="page-heading">{{ page.title }}</h1>
 {%- endif -%}
@@ -24,16 +23,32 @@ layout: default
           {% endif %}
           <h2 class="post-title">{{ post.title | escape }}</h2>
         </a>
-        <div class="post-meta">
+        <!-- <div class="post-meta">
           <ul class="post-categories">
-            {%- for tag in post.categories -%}
-              <li>{{ tag }}</li>
+            {%- for tags in post.category -%}
+              <li>{{ tags }}</li>
      {%- endfor -%}
           </ul>
           <div class="post-date">
             <i class="icon-calendar"></i>
             {{ post.date | date: date_format }}</div>
-        </div>
+        </div> -->
+        <div class="post-meta">
+
+          <ul class="post-categories">
+            {% for tag in post.tags %}
+            <a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}"><li>{{ tag }}</li></a>
+            {% endfor %}
+            {% for category in post.category %}
+            <a class="codinfox-tag-mark2" href="/blog/category/#{{ category | slugify }}" style="color:blue"><li>{{ category }}</li></a>
+            {% endfor %}
+          </ul>
+
+            <div class="post-date">
+              <i class="icon-calendar"></i>
+              {{ post.date | date: date_format }}</div>
+          </div>
+
         <div class="post">
           {%- if site.show_excerpts -%}
             {{ post.excerpt }}
