--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -103,7 +103,7 @@ margin-left: -100px;
       line-height: normal;
     }
     img {
-      max-width: 150px;
+      // max-width: 150px;
     }
   }
 }
