--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
             <i class="icon-github-circled"></i>
           </li>
         </a>
-        <a href="https://www.linkedin.com/in/hadnunpi/" target=_blank>
+        <a href="https://www.linkedin.com/in/hp-nunes/" target=_blank>
           <li>
             <i class="icon-linkedin"></i>
           </li>
